--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,12 @@
 
-DEBUG=example:*
-NAMESPACE=example
+DEBUG=funfunz-graphql-example:*
+NAMESPACE=funfunz-graphql-example
 
 SERVER_PORT=3001
 SERVER_PUBLIC_URL="http://localhost:3001"
 SERVER_SESSION_SECRET="keyboard cat"
 
-DB_NAME=example
+DB_NAME=funfunz-graphql-example
 DB_USER=root
 DB_PASS=password
 DB_HOST=127.0.0.1
